fixing spacing

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -10,3 +10,7 @@
   object-position: 50% 20%;
   transform: scale(1.08);
 }
+
+.page__content p {
+  margin-bottom: 1.5em;
+}
